Fix spacing and form size

--- a/style.css
+++ b/style.css
@@ -12,10 +12,12 @@ h1 {
 
 h2 {
     margin: 0px 0px 80px 30px;
+    font-size: 1.8rem;
 }
 
 h3 {
-    margin: 10px 0px 0px 0px;
+    margin: 0px 0px 10px;
+    font-size: 1.5rem;
 }
 
 input {
@@ -94,7 +96,8 @@ input:not(:focus):not(:placeholder-shown):valid {
 .form-container {
     background-color: rgb(209, 243, 209);
     width: 61vw;
-    padding: 30px;
+    min-width: 542px;
+    padding: 10px 30px 30px;
     box-shadow: 2px 8px 10px rgb(129, 167, 129);
 }
 
